@@ -16,6 +16,7 @@
 	- added brp-java-gcjcompile build helper.
 	- fix: java compiled with -O0 confuses debugedit (#161722).
 	- fix: % at end-of-line overflow (#161091).
+	- *_terminate_build macros set per-pkg, not per-invocation (#161081).
 
 4.4 -> 4.4.1:
 	- force *.py->*.pyo byte code compilation with brp-python-bytecompile.
